# bookstore

./: README.md  pyproject.toml
api/: urls.py  views.py
bookstore/: settings.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: order_serializer.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py
product/serializers/: category_serializer.py  product_serializer.py
