[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["marcosviana91 <marcos.viana.91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
factory-boy = "^3.3.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
